# 2gis_parser

./: .env  .gitignore  Google_Trends_API.ipynb  bot.py  ddd.py  decod_link.py  main.py  pyproject.toml  requirements.txt  save_on_csv.py  save_on_excel.py  xpathes.py
files/: samara-Вкусно и точка-2024-01-10_12.38.xlsx  samara-Вкусно и точка-2024-01-10_12.45.xlsx
result_output/: samara_restore.csv  samara_Вкусно и точка.csv  samara_Магазин техники.csv
utils/: decod_link.py  driver_settings.py  elements.py  save_on_excel.py  short_link.py  xpathes.py
