[tool.poetry]
name = "2gisparser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.16.0"
pandas = "^2.1.4"
urllib3 = "^2.1.0"
openpyxl = "^3.1.2"
black = "^23.12.1"
isort = "^5.13.2"
aiogram = "^3.3.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
mtranslate = "^1.8"
aiohttp-socks = "^0.8.4"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

